<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="com.fatur.foodie.MainActivity">

    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="launchDetailActivity"
        android:textSize="36dp"
        android:text="@string/food" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="64dp">

    <TextView
        android:autoLink="web"
        android:textColor="@color/black"
        android:lineSpacingExtra="4sp"
        android:text="@string/friedrice_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
        android:onClick="substractOne"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/minus"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/quantityTextView"
        android:text="@string/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:onClick="addOne"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/plus"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:text="About"
        android:onClick="launchAboutActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="OnClick" />
</LinearLayout>